--- a/meson.build
+++ b/meson.build
@@ -9,4 +9,5 @@ project_dep = declare_dependency(sources: source_dir, dependencies: [boost_dep])
 
 subdir('command')
 subdir('flyweight')
+subdir('observer')
 executable('main', sources: ['src/main.cpp'], dependencies: [project_dep])
