--- a/meson.build
+++ b/meson.build
@@ -10,4 +10,5 @@ project_dep = declare_dependency(sources: source_dir, dependencies: [boost_dep])
 subdir('command')
 subdir('flyweight')
 subdir('observer')
+subdir('singleton')
 executable('main', sources: ['src/main.cpp'], dependencies: [project_dep])
