Implement Undo operation by using command pattern

--- a/command/meson.build
+++ b/command/meson.build
@@ -1,3 +1,3 @@
-executable('command', sources: ['src/command.cpp'], dependencies: [project_dep])
-executable('frogyy', sources: ['src/frogyy.cpp'], dependencies: [project_dep])
-
+executable('command', sources: ['src/command.cpp'])
+executable('frogyy', sources: ['src/frogyy.cpp'])
+executable('undo_redo', sources: ['src/undo_redo.cpp'])
