State pattern basic implementation

--- a/meson.build
+++ b/meson.build
@@ -11,4 +11,5 @@ subdir('command')
 subdir('flyweight')
 subdir('observer')
 subdir('singleton')
+subdir('state')
 executable('main', sources: ['src/main.cpp'], dependencies: [project_dep])
